# atlas

./: .gitignore  README.md
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: lib.rs
crates/atlas-index/: Cargo.toml
crates/atlas-index/src/: items.rs  main.rs  modules.rs
crates/atlas-index/tests/: index.rs
crates/atlas-index/tests/fixtures/sample/: Cargo.toml
crates/atlas-index/tests/fixtures/sample/src/: lib.rs
crates/atlas-index/tests/fixtures/sample/src/util/: mod.rs
crates/atlas-index/tests/fixtures/sample/src/widget/: button.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/design/: data-file.md  descriptions.md  item-inventory.md  pipeline-tour.md  reading-crates.md  reading-modules.md  scope.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/public/: atlas.json
frontend/src/: App.css  App.tsx  CrateGraph.tsx  CrateNode.tsx  ModulePanel.css  ModulePanel.tsx  Search.css  Search.tsx  Sidebar.tsx  SignatureLine.tsx  StatBar.tsx  atlas.ts  graph-layout.ts  index.css  item-kinds.ts  load-atlas.ts  main.tsx  signature.ts
frontend/src/app/: App.css  App.tsx
frontend/src/data/: atlas.ts
frontend/src/graph/: CrateGraph.tsx  CrateNode.css  CrateNode.tsx  graph-layout.ts  layout-cache.ts  layout.worker.ts
frontend/src/panel/: ModulePanel.css  ModulePanel.tsx  SignatureLine.css  signature.ts
frontend/src/pipeline/: pipeline.ts
frontend/src/search/: Search.css  Search.tsx
frontend/src/shared/: item-kinds.ts
frontend/src/shell/: Sidebar.css  Sidebar.tsx  StatBar.css  StatBar.tsx
