[package]
name = "atlas-index"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustc-atlas"
path = "src/main.rs"

[dependencies]
atlas-core = { version = "0.1.0", path = "../atlas-core" }
cargo_metadata = "0.23.1"
clap = { version = "4.6.1", features = ["derive"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
rustdoc-types = "0.57.3"
serde_json = "1.0.150"
syn = { version = "2.0.117", features = ["full"] }
